<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    style="@style/loginParent"
    tools:context="com.example.myapplication.MainActivity">
    <ScrollView
        style="@style/parent">

        <RelativeLayout
            style="@style/parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:weightSum="12"
                android:baselineAligned="false">

                <LinearLayout
                    style="@style/parent"
                    android:layout_weight="0"
                    android:background="@drawable/login_shape_bk">

                    <ImageView
                        style="@style/parent"
                        android:background="@drawable/ic_login_bk"
                        android:contentDescription="login background" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:orientation="vertical"
                android:layout_marginTop="8dp"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp">


                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_horizontal"
                    app:srcCompat="@drawable/logo"
                    tools:ignore="ContentDescription" />

                <androidx.cardview.widget.CardView
                    style="@style/loginCard"
                    app:cardCornerRadius="@dimen/loginCardRadius"
                    android:elevation="5dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/loginViewsMargin"
                    android:layout_marginBottom="@dimen/loginViewsMargin"
                    android:background="@color/whiteCardColor">



                    <LinearLayout
                        style="@style/linearParent"
                        android:layout_gravity="center"
                        android:padding="@dimen/loginViewsMargin">


                        <TextView
                            style="@style/headerTextPrimary"
                            android:text="Login"
                            android:layout_marginTop="@dimen/loginViewsMargin"/>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputEmail"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">
                            <EditText
                                android:id="@+id/Email"
                                style="@style/modifiedEditText"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:hint="@string/login_email_hint"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/textInputPassword"
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin">
                            <EditText
                                android:id="@+id/montant"
                                style="@style/modifiedEditText"
                                android:hint="@string/login_password_hint"
                                android:maxLines="1"
                                android:inputType="textPassword"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            style="@style/loginButton"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="@dimen/loginViewsMargin"
                            android:onClick="Login"
                            android:text="Login"
                            app:backgroundTint="#EB8320" />

                        <TextView
                            style="@style/parent"
                            android:layout_marginTop="@dimen/loginViewsMargin"
                            android:onClick="Register"
                            android:text="@string/login_signup_hint"
                            android:textAlignment="center"
                            android:textColor="@color/primaryTextColor"
                            android:textStyle="bold" />


                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
